dnl Process this file with autoconf to produce a configure script.
AC_INIT(acinclude.m4)

PACKAGE=exult
MAJOR=0
RELNUM=12
VERSION='$MAJOR.$RELNUM'

AM_INIT_AUTOMAKE($PACKAGE,$VERSION,no-define)
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")

AM_CONFIG_HEADER(autoconfig.h)

dnl AC_DEFUN(MY_PROG_LIBTOOL,
dnl [
dnl if test -z "$LIBTOOL"; then
dnl  dnl libtool is only for C, so I must force him
dnl  dnl to find the correct flags for C++
dnl  CC=$CXX
dnl  CFLAGS="$CXXFLAGS"
dnl  AC_LANG_SAVE
dnl  AC_LANG_C
dnl  AC_REQUIRE([AM_PROG_LIBTOOL]) 
dnl  dnlAC_REQUIRE([AC_PROG_LIBTOOL]) dnl for libraries
dnl  LIBTOOL="$LIBTOOL --silent"
dnl  dnl AC_SUBST(LIBTOOL)
dnl  AC_LANG_RESTORE
dnl fi
dnl ]) 

AC_DEFUN(AC_CHECK_BOOL,
[
        AC_MSG_CHECKING([for bool])
        AC_CACHE_VAL(ac_cv_have_bool,
        [
                AC_LANG_CPLUSPLUS
                AC_TRY_COMPILE([],
                 [bool aBool = true;],
                 [ac_cv_have_bool="yes"],
                 [ac_cv_have_bool="no"])
        ]) dnl end AC_CHECK_VAL
        AC_MSG_RESULT($ac_cv_have_bool)
        if test "$ac_cv_have_bool" = "yes"; then
                AC_DEFINE(HAVE_BOOL, 1, [Define if the C++ compiler supports BOOL])
        fi
])

dnl Checks for programs.
AC_PROG_CC
AC_REQUIRE([AC_PROG_CPP])
AC_PROG_CPP
AC_PROG_INSTALL

echo "Wondering what our windowing system is... "


if test -d "/etc/X11" ; then
	WINDOWING_SYSTEM="-DXWIN"
fi
if test -d "/usr/X11" ; then
	WINDOWING_SYSTEM="-DXWIN"
fi
if test "$WINDOWING_SYSTEM" = "-DXWIN"; then
	echo "Smells like X11"
else
	echo "Umm. Doesn't seem to be X11."
fi

dnl Just for record-keeping
AC_DEFINE(AUTOCONFIGURED)

AC_MSG_CHECKING(the SDL installation)
AC_CHECK_PROG(HAVE_SDL_CONFIG, sdl-config, yes, no)

if test "$HAVE_SDL_CONFIG" != "yes"; then
        echo "You must have SDL installed."
        exit 1
fi
SDL_INCLUDES=`sdl-config --cflags`
SDL_LIBS=`sdl-config --libs`
AC_DEFINE(HAVE_SDL)
AC_MSG_RESULT(Now we know lots about how SDL is installed locally)

AC_MSG_CHECKING(for libkmidi)

KMID_INCLUDES=""
KMID_LIBS=""
for i in /usr/include/libkmid.h /usr/include/libkmid/libkmid.h /usr/local/include/libkmid.h /usr/local/include/libkmid/libkmid.h
	do
	test -f "$i" && KMID_INCLUDES=`dirname $i` && HAVE_KMID="yes"
	done
for i in /lib /usr/lib /usr/local/lib
	do
	test -f "$i/libkmid.so" && KMID_LIBS="-L$i -lkmid"
	done
if test "$HAVE_KMID" != "yes" ; then
	echo "You really need to have kmid installed."
	echo "this requirement will be relaxed soon."
	exit 1
else
	AC_MSG_RESULT(Found it. Neat.)
	AC_DEFINE(HAVE_LIBKMIDI)
fi
KMID_INCLUDES="-I$KMID_INCLUDES"


AC_MSG_CHECKING(for freetype)
FREETYPE_DIR=""
if test -f "/usr/include/freetype.h"; then
	FREETYPE_DIR="/usr/include"
fi
if test -f "/usr/include/freetype/freetype.h"; then
	FREETYPE_DIR="/usr/include/freetype"
fi
if test -f "/usr/local/include/freetype.h"; then
	FREETYPE_DIR="/usr/local/include"
fi

if test "$FREETYPE_DIR" != ""; then
	AC_MSG_RESULT($FREETYPE_DIR)
	AC_DEFINE(HAVE_FREETYPE)
else
	echo "No freetype == No text. No text == No game."
	echo "Sorry..."
	exit 1
fi



AC_MSG_CHECKING(for a C++-Compiler)
dnl if there is one, print out. if not, don't matter
AC_MSG_RESULT($CXX)
 
if test -z "$CXX"; then AC_CHECK_PROG(CXX, g++, g++) fi
if test -z "$CXX"; then AC_CHECK_PROG(CXX, CC, CC) fi
if test -z "$CXX"; then AC_CHECK_PROG(CXX, xlC, xlC) fi
if test -z "$CXX"; then AC_CHECK_PROG(CXX, DCC, DCC) fi
test -z "$CXX" && AC_MSG_ERROR([no acceptable C++-compiler found in \$PATH])

AC_PROG_CXX_WORKS
AC_PROG_CXX_GNU

AM_ENABLE_SHARED
AM_DISABLE_STATIC
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
AC_SUBST(SDL_INCLUDES)
AC_SUBST(SDL_LIBS)
AC_SUBST(FREETYPE_DIR)
AC_SUBST(WINDOWING_SYSTEM)
AC_SUBST(RELNUM)
AC_SUBST(KMID_INCLUDES)
AC_SUBST(KMID_LIBS)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h sys/time.h unistd.h)


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_BOOL


dnl this is for debug
AC_ARG_ENABLE(debug, [  --enable-debug          enable debug messages [default no]],,enable_debug=no)
AC_MSG_CHECKING(whether to enable debug)
if test x$enable_debug = xyes; then
  AC_MSG_RESULT(yes)
  AC_DEFINE(DEBUG)
  DEBUG_FLAGS="-g"
else
  AC_MSG_RESULT(no)
fi

AC_SUBST(DEBUG_FLAGS)


dnl 
AC_C_INLINE
if test x$CC = xgcc; then
   CFLAGS="$CFLAGS -Wall"
fi     
      

AC_OUTPUT(Makefile \
audio/Makefile \
npc/Makefile \
script/Makefile \
conf/Makefile)
